2002-01-04  Alexander Kirillov  <kirillov@math.sunysb.edu>

	* copying-moving.sgml: major rewrite

2002-01-04  Alexander Kirillov  <kirillov@math.sunysb.edu>

	* preface.sgml, gui-elemnts.sgml, toolbars.sgml, menus.sgml: minor
	clean-up: 
	corrected some typos, used correct sgml tags (e.g.,
	<keycap>Ctrl</keycap> instead of "Ctl", or
	<application>Gnumeric</application> instead of Gnumeric), fixed
	capitalization and periods  in titles.  

2002-01-02  Alexander Kirillov  <kirillov@math.sunysb.edu>

	* gnumeric-C.omf: added OMF file. Still missing emails of the
	authors, but this is not essential. More importantly, still need
	to change the makefiles

2002-01-01  Jody Goldberg <jody@gnome.org>

	* preface.sgml : minor edits.

2001-12-31  Jody Goldberg <jody@gnome.org>

	* selections.sgml : correct reference to shift-space and add ctrl-/
	  and ctrl-arrow

2001-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.0.0

2001-12-31 Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dndselection.sgml : outdated, remove
	* Makefile.am : remove dndselection.sgml

2001-12-30 Andreas J. Guelzow <aguelzow@taliesin.ca>

	* files.sgml : fix some formatting problems

2001-12-30  Jody Goldberg <jody@gnome.org>

	* preface.sgml : a first pass.  Needs editing and polish.

2001-12-30  Kevin Breit  <mrproper@ximian.com>

	* authors.sgml, formulas.sgml, gnumeric.sgml, license.sgml, menus.sgml: Commited these changes for acuster.

2001-12-30  Kevin Breit  <mrproper@ximian.com>

	* graphs.sgml: Reworded stuff to be actually accurate.

	* gnumeric.sgml: Added my name to the authors list

2001-12-30  Jody Goldberg <jody@gnome.org>

	* authors.sgml : update the authors list.
	  remaining cleanup after lunch.

2001-12-28 Andreas J. Guelzow <aguelzow@taliesin.ca>

	* files.sgml : add more LaTeX2e documentation
	* analysis-tools.sgml : fix capitalisation of  Gnumeric

2001-12-29 Andreas J. Guelzow <aguelzow@taliesin.ca>

	* graphs.sgml : small id fix to remove error messages
