@@ -1,0 +1,3 @@
+<glossary id="appendix-glossary">
+  <title>Glossary</title>
+</glossary>
