@@ -12,7 +12,7 @@ GNU oleo">
 <!ENTITY data-analysis SYSTEM "data-analysis.xml">
 <!ENTITY menus SYSTEM "menus.xml">
 <!ENTITY function-reference SYSTEM "function-reference.xml">
-<!ENTITY glossary SYSTEM "glossary.xml">
+<!ENTITY glossary SYSTEM "appendix-glossary.xml">
 <!ENTITY bugs SYSTEM "bugs.xml">
 <!ENTITY author SYSTEM "author.xml">
 <!ENTITY license SYSTEM "license.xml">
@@ -21,75 +21,72 @@ GNU oleo">
 
 <!--
 Note to Translator:
-This document is written in 2nd person.  If your language has a formal 2nd person it 
-should be written in this voice.
+This document is written in 2nd person.  If your language has a formal
+2nd person it  should be written in this voice.
 -->
 
 <book id="index" lang="en">
   <title>Gnumeric User Manual</title>
   <bookinfo>
-	
-	<authorgroup>
-	  <author><firstname>Eric</firstname><surname>Baudais</surname></author>
-	</authorgroup>
-	
+    
+    <authorgroup>
+      <author><firstname>Eric</firstname><surname>Baudais</surname></author>
+    </authorgroup>
+    
     <releaseinfo>
-	  This is release 0.4 of the Gnumeric User Manual.
+      This is release 0.4 of the Gnumeric User Manual.
     </releaseinfo>
-	
+    
     <copyright>
       <year>1998, 1999, 2000, 2001</year> 
       <holder>Miguel de Icaza</holder>
     </copyright>
-	
+    
     <legalnotice id="legalnotice">
-	  
-	  <para>
-		Permission is granted to copy, distribute and/or modify this
-		document under the terms of the <ulink type="help"
-        url="gnome-help:fdl"><citetitle>GNU Free Documentation
-		License</citetitle></ulink>, Version 1.1 or any later version
-		published by the Free Software Foundation with no Invariant
-		Sections, no Front-Cover Texts, and no Back-Cover Texts. You
-		may obtain a copy of the <citetitle>GNU Free Documentation
-		License</citetitle> from the Free Software Foundation by
-		visiting <ulink type="http" url="http://www.fsf.org">their
-		Web site</ulink> or by writing to: Free Software Foundation,
-		Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
-		USA.
-	  </para>
-	  <para>
-		Many of the names used by companies to distinguish their
-		products and services are claimed as trademarks. Where those
-		names appear in any GNOME documentation, and those trademarks
-		are made aware to the members of the GNOME Documentation
-		Project, the names have been printed in caps or initial caps.
-	  </para>
-
+      <para>
+	Permission is granted to copy, distribute and/or modify this
+	document under the terms of the <ulink type="help"
+						       url="gnome-help:fdl"><citetitle>GNU Free Documentation
+	    License</citetitle></ulink>, Version 1.1 or any later version
+	published by the Free Software Foundation with no Invariant
+	Sections, no Front-Cover Texts, and no Back-Cover Texts. You
+	may obtain a copy of the <citetitle>GNU Free Documentation
+	License</citetitle> from the Free Software Foundation by
+	visiting <ulink type="http" url="http://www.fsf.org">their
+        Web site</ulink> or by writing to: Free Software Foundation,
+	Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
+	USA.
+      </para>
+      <para>
+	Many of the names used by companies to distinguish their
+	products and services are claimed as trademarks. Where those
+	names appear in any GNOME documentation, and those trademarks
+	are made aware to the members of the GNOME Documentation
+	Project, the names have been printed in caps or initial caps.
+      </para>
+      
     </legalnotice>
-
+    
   </bookinfo>
-
+  
   <chapter id="introduction">
-	<title>Introduction</title> 
-
-  <para>
-	<application>Gnumeric</application> is a spreadsheet program.  It's 
-	goal is to provide you with a tool to manipulate and calculate 
-	data.  Many different people will have many different uses for 
-	<application>Gnumeric</application> from school teachers and 
-	administrators to accountants and financial analysists.
-  </para>	
-
+    <title>Introduction</title> 
+    
+    <para>
+      <application>Gnumeric</application> is a spreadsheet program.  It's 
+      goal is to provide you with a tool to manipulate and calculate 
+      data.  Many different people will have many different uses for 
+      <application>Gnumeric</application> from school teachers and 
+      administrators to accountants and financial analysists.
+    </para>	
+    
 	&introduction;
 
   </chapter>
 
   <chapter id="start">
     <title>Getting Started</title>
-
-	&getting-started;
-
+      &getting-started;
   </chapter>
 
 <!--
