@@ -1,4 +1,14 @@
+2002-01-04  Kevin Breit  <mrproper@ximian.com>
+
+	* new/appendix-glossary.sgml: Added this file to CVS so that stuff links right
+
+	* new/gnumeric.xml: Added the appendix-glossary.xml file
+
+<<<<<<< ChangeLog
+	* new/preface.xml: Added this file to CVS and put it together.  This should be about all it needs.
+
 2002-01-04  Alexander Kirillov  <kirillov@math.sunysb.edu>
+
 
 	* copying-moving.sgml: major rewrite
 
